--- a/handel.yml
+++ b/handel.yml
@@ -9,13 +9,8 @@ environments:
       load_balancer:
         type: http
       containers:
-      - name: lrs
       - name: kong
         image_name: kong
-        environment_variables:
-          KONG_DATABASE: cassandra
-          KONG_CASSANDRA_CONTACT_POINTS: kong-database
-          KONG_PG_HOST: kong-database
         links:
         - kong-database
         port_mappings:
@@ -25,6 +20,8 @@ environments:
           health_check_path: /
       - name: kong-database
         image_name: cassandra:3
+      - name: webhook
+      - name: lrs
       auto_scaling:
         min_tasks: 1
         max_tasks: 1
@@ -34,10 +31,3 @@ environments:
       - lrs-storage
     lrs-storage:
       type: efs
-    webhook:
-      type: apigateway
-      path_to_code: events
-      lambda_runtime: nodejs6.10
-      handler_function: index.handler
-      provisioned_memory: 256
-      function_timeout: 300
