--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,10 +7,12 @@ phases:
       - $(aws ecr get-login --region us-west-2)
   build:
     commands:
+      _ chmod a+x ./mongodb/codebuild-docker-build.sh
+      - bash ./mongodb/codebuild-docker-build.sh
       - chmod a+x ./lrs/codebuild-docker-build.sh
       - bash ./lrs/codebuild-docker-build.sh
-      - chmod a+x ./events/codebuild-docker-build.sh
-      - bash ./events/codebuild-docker-build.sh
+      # - chmod a+x ./events/codebuild-docker-build.sh
+      # - bash ./events/codebuild-docker-build.sh
 artifacts:
   files:
     - ./**/*
