--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -77,7 +77,7 @@ RUN mkdir -p /data/db /data/configdb \
 
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
-ENTRYPOINT ["docker-entrypoint.sh"]
+ENTRYPOINT ["./docker-entrypoint.sh"]
 
 EXPOSE 27017
 CMD ["mongod"]
