--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -76,8 +76,8 @@ RUN mkdir -p /data/db /data/configdb \
 # VOLUME /data/db /data/configdb
 
 COPY docker-entrypoint.sh /usr/local/bin/
-RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
-ENTRYPOINT ["./docker-entrypoint.sh"]
+# RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
+ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 27017
 CMD ["mongod"]
