--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -76,6 +76,7 @@ RUN mkdir -p /data/db /data/configdb \
 # VOLUME /data/db /data/configdb
 
 COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 # RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
 ENTRYPOINT ["docker-entrypoint.sh"]
 
