--- a/handel.yml
+++ b/handel.yml
@@ -1,40 +1,18 @@
 version: 1
 
-name: ces-student-agent
+name: ces-student-agent-test
 
 environments:
   dev:
-    # dns:
-    #   type: route53zone
-    #   name: arch.byu.edu
     lrs:
       type: ecs
       load_balancer:
         type: http
-        # dns_names:
-        #   - lrs.arch.byu.edu
       containers:
-      # - name: lrs # Done manually for now.
-      #   links:
-      #   - mongodb
-      #   port_mappings:
-      #   - 80
       - name: mongodb
         port_mappings:
         - 27017
         - 28017
-      # - name: kong
-      #   image_name: kong
-      #   links:
-      #   - kong-database
-      #   port_mappings:
-      #   - 8000
-      #   routing:
-      #     base_path: /
-      #     health_check_path: /
-      # - name: kong-database # RDS
-      #   image_name: cassandra:3
-      # - name: webhook
       auto_scaling:
         min_tasks: 1
         max_tasks: 1
@@ -42,6 +20,5 @@ environments:
         key_name: mhailstone
       dependencies:
       - lrs-storage
-      # - dns
     lrs-storage:
       type: efs
